# btgly

./: .clang-format  CMakeLists.txt
bench/: bitvec_bench.cc
include/btgly/: bitvec.hh  codepoint.hh  kind.hh  radix.hh  strbitvec.hh
src/: bitvec.cc  strbitvec.cc
tests/: arith_fuzz_test.cc  bitvec_edge_cases_test.cc  bitvec_test.cc  strbitvec_test.cc  width_property_test.cc
